--- a/ex10/app/src/main/AndroidManifest.xml
+++ b/ex10/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:theme="@style/AppTheme">
         <service
             android:name=".MyIntentService"
-            android:exported="false"></service>
+            android:exported="false"
+            android:enabled="false"
+            ></service>
         <service
             android:name=".MyService"
             android:enabled="true"
